fix: Wrong font-size for time slots

--- a/css/wct-styles.css
+++ b/css/wct-styles.css
@@ -556,6 +556,7 @@ form.wp-block-jetpack-contact-form .wp-block-button {
 }
 .wordcamp-schedule__time-slot-header {
   border-top: solid 1px var(--wp--preset--color--custom-violet) !important;
+  font-size: 1.15rem;
 }
 
 header.wp-block-template-part a {
